# Time-Series-Model-Analysis-and-Diagnostic-Tool

./: .coverage  .dockerignore  .env.example  Dockerfile  README.md  README_API.md  README_EN.md  app.py  deploy.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml
.github/workflows/: docker-publish.yml
examples/: basic_usage.py  batch_analysis.py  demo.py  fastapi_client_demo.py
src/tsdiag/: __init__.py  api.py  cli.py  core.py  fastapi_app.py  invertibility.py  stationarity.py
tests/: test_core.py  test_invertibility.py  test_stationarity.py
