[project]
name = "time-series-model-analysis-and-diagnostic-tool"
version = "0.1.0"
description = "时间序列模型分析与诊断工具 - 提供AR模型平稳性检验和MA模型可逆性检验功能"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "click>=8.0.0",
]
authors = [
    {name = "Time Series Analysis Tool", email = "ym214413520@gmail.com"}
]
keywords = ["time-series", "analysis", "diagnostic", "stationarity", "invertibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.scripts]
tsdiag = "tsdiag.cli:main"

[project.urls]
Homepage = "https://github.com/zym9863/time-series-model-analysis-and-diagnostic-tool"
Repository = "https://github.com/zym9863/time-series-model-analysis-and-diagnostic-tool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsdiag"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
